Fix problem with text wrap

--- a/style.scss
+++ b/style.scss
@@ -54,6 +54,7 @@ a {
   text-align: center;
   display: grid;
   grid-template-rows: 136px 1fr;
+  background-color: #fff;
 }
 
 .header {
@@ -62,14 +63,14 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #fff;
 }
 
 .info_wrap {
   width: 100%;
   height: 60%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr) 660px repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr) 3fr repeat(2, 1fr);
+  ;
   align-items: center;
 
   .logo {
@@ -107,6 +108,7 @@ a {
       width: 100%;
       font-size: 14px;
       justify-self: start;
+      padding-right: 20px;
     }
   }
 }
@@ -184,6 +186,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 
   ul {
     width: 100%;
@@ -191,9 +194,13 @@ a {
     justify-content: space-around;
     padding: 0 20px;
 
+
     li {
       cursor: pointer;
       padding: 2px 10px;
+      white-space: nowrap;
+      font-size: 14px;
+      line-height: 22px;
     }
 
     li:hover {
